<resources>
    <string name="app_name">CWK-MWE</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="player">Player</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="settingsBtn">Settings</string>
    <string name="bookmarksBtn">Bookmarks</string>
    <string name="add_bookmark">Add Bookmark</string>
    <string name="homeBtn">Home</string>
    <string name="dark_modeBtn">Dark Mode</string>
    <string name="playback_speed">Playback Speed</string>
    <string name="playBtn">Play</string>
    <string name="pauseBtn">Pause</string>
    <string name="stopBtn">Stop</string>
    <string name="skipBtn">Skip</string>
    <string name="music_file_name">Music File Name</string>
    <string name="enter_playback_speed">Enter Playback Speed</string>
    <string name="set_speed">Set Speed</string>
    <string name="background_color">Background Color</string>
    <string name="no_music_files_found">No music files found.</string>

    <string-array name="color_options">
        <item>White</item>
        <item>Red</item>
        <item>Blue</item>
        <item>Green</item>
        <item>Yellow</item>
    </string-array>
</resources>