<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <!-- Bind the PlayerViewModel -->
        <variable
            name="viewModel"
            type="com.example.cwk_mwe.PlayerViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_color"

        tools:context=".PlayerActivity">

        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="350dp"
            android:layout_height="25dp"
            android:layout_marginTop="256dp"
            android:max="@{viewModel.duration}"
            android:progress="@{viewModel.currentPosition}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/buttonRow"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="32dp"
            android:layout_marginHorizontal="15dp"
            android:gravity="center"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/seekBar"
            app:layout_constraintEnd_toEndOf="parent">

            <!-- Play Button -->
            <ImageButton
                android:id="@+id/playBtn"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_play"
                app:tint="@color/primary_color"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/playBtn"
                android:onClick="@{() -> viewModel.play(viewModel.getCurrentFilePath)}"
                android:layout_marginHorizontal="15dp"
                />

            <!-- Pause Button -->
            <ImageButton
                android:id="@+id/pauseBtn"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_pause"
                app:tint="@color/primary_color"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/pauseBtn"
                android:onClick="@{() -> viewModel.pause()}"
                android:layout_marginHorizontal="15dp"
                />

            <!-- Stop Button -->
            <ImageButton
                android:id="@+id/stopBtn"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_stop"
                app:tint="@color/primary_color"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/stopBtn"
                android:onClick="@{() -> viewModel.stop()}"
                android:layout_marginHorizontal="15dp"
                />

            <!-- skip Button -->
            <ImageButton
                android:id="@+id/skipBtn"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_skip"
                app:tint="@color/primary_color"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/skipBtn"
                android:onClick="@{() -> viewModel.skip()}"
                android:layout_marginHorizontal="15dp"
                />

        </LinearLayout>




        <ImageButton
            android:id="@+id/bookmarkBtn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:scaleType="centerCrop"
            android:layout_marginBottom="64dp"
            android:src="@drawable/ic_bookmark_add"
            app:tint="@color/primary_color"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/add_bookmark"
            android:onClick="@{() -> viewModel.addBookmark()}"
            app:layout_constraintBottom_toTopOf="@+id/homeBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
             />


        <!-- Home Button -->
        <ImageButton
            android:id="@+id/homeBtn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:scaleType="centerCrop"

            android:layout_marginBottom="64dp"
            android:src="@drawable/home_icon"
            app:tint="@color/primary_color"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/homeBtn"
            android:onClick="@{() -> viewModel.navigateToHome(context)}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>