<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <!-- Bind the PlayerViewModel -->
        <variable
            name="viewModel"
            type="com.example.cwk_mwe.MainViewModel" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_color"
        tools:context=".MainActivity">

        <!-- Settings Button -->

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="90dp"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:layout_editor_absoluteX="110dp"
            tools:listitem="@layout/track_item" />

        <TextView
            android:id="@+id/empty_message"
            android:textColor="@color/text_color"
            android:layout_width="162dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="124dp"
            android:gravity="center"
            android:text="@string/no_music_files_found"
            android:textAppearance="?attr/textAppearanceBody1"
            app:layout_constraintEnd_toStartOf="@+id/recyclerView"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/recyclerView"
            app:layout_constraintTop_toBottomOf="@+id/recyclerView" />

        <LinearLayout
            android:id="@+id/buttonRow"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="15dp"
            android:gravity="center"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        <ImageButton
            android:id="@+id/settingsBtn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="32dp"
            android:scaleType="centerCrop"
            android:layout_marginBottom="64dp"
            android:src="@drawable/ic_settings"
            app:tint="@color/primary_color"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/settingsBtn"
            android:onClick="@{() -> viewModel.navigateToSettings(context)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <ImageButton
            android:id="@+id/bookmarksBtn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="32dp"
            android:scaleType="centerCrop"
            android:layout_marginBottom="64dp"
            android:src="@drawable/ic_bookmarks"
            app:tint="@color/primary_color"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/bookmarksBtn"
            android:onClick="@{() -> viewModel.loadBookmarks()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>